<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>software.latic</groupId>
    <artifactId>latic</artifactId>
    <version>1.4.1</version>
    <packaging>jar</packaging>

    <name>LATIC</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
        <maven.compiler.release>23</maven.compiler.release>
        <javafx.version>23</javafx.version>
        <corenlp.version>[4.5.6,4.6.0)</corenlp.version>
        <com.ibm.icu.version>[68.1,69)</com.ibm.icu.version>
    </properties>


    <profiles>
        <profile>
            <id>en-de</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <dependencies>
                <!--JavaFX-->
<!--                <dependency>-->
<!--                    <groupId>org.openjfx</groupId>-->
<!--                    <artifactId>javafx-base</artifactId>-->
<!--                    <version>${javafx.version}</version>-->
<!--                </dependency>-->

                <!--CoreNLP-->
                <dependency>
                    <groupId>edu.stanford.nlp</groupId>
                    <artifactId>stanford-corenlp</artifactId>
                    <version>${corenlp.version}</version>
                </dependency>
                <dependency>
                    <groupId>edu.stanford.nlp</groupId>
                    <artifactId>stanford-corenlp</artifactId>
                    <version>${corenlp.version}</version>
                    <classifier>models</classifier>
                </dependency>
                <!--        <dependency>-->
                <!--            <groupId>edu.stanford.nlp</groupId>-->
                <!--            <artifactId>stanford-corenlp</artifactId>-->
                <!--            <version>${corenlp.version}</version>-->
                <!--            <classifier>models-english</classifier>-->
                <!--        </dependency>-->
                <dependency>
                    <groupId>edu.stanford.nlp</groupId>
                    <artifactId>stanford-corenlp</artifactId>
                    <version>${corenlp.version}</version>
                    <classifier>models-german</classifier>
                </dependency>
                <!--        <dependency>-->
                <!--            <groupId>edu.stanford.nlp</groupId>-->
                <!--            <artifactId>stanford-corenlp</artifactId>-->
                <!--            <version>${corenlp.version}</version>-->
                <!--            <classifier>models-spanish</classifier>-->
                <!--        </dependency>-->
                <!--        <dependency>-->
                <!--            <groupId>edu.stanford.nlp</groupId>-->
                <!--            <artifactId>stanford-corenlp</artifactId>-->
                <!--            <version>${corenlp.version}</version>-->
                <!--            <classifier>models-french</classifier>-->
                <!--        </dependency>-->

                <!--Logger for CoreNLP-->
                <dependency>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-reload4j</artifactId>
                    <version>1.7.35</version>
                </dependency>

                <!-- Document import-->
                <dependency>
                    <groupId>org.apache.poi</groupId>
                    <artifactId>poi-ooxml</artifactId>
                    <version>[5.2.5,5.3)</version>
                </dependency>
                <dependency>
                    <groupId>org.apache.pdfbox</groupId>
                    <artifactId>pdfbox</artifactId>
                    <version>[2.0.25, 2.1)</version>
                </dependency>

                <dependency>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-databind</artifactId>
                    <version>[2.13.5,2.14)</version>
                </dependency>

                <!-- Charset Detection -->

                <dependency>
                    <groupId>com.ibm.icu</groupId>
                    <artifactId>icu4j</artifactId>
                    <version>${com.ibm.icu.version}</version>
                </dependency>

                <dependency>
                    <groupId>com.ibm.icu</groupId>
                    <artifactId>icu4j-charset</artifactId>
                    <version>${com.ibm.icu.version}</version>
                </dependency>

                <dependency>
                    <groupId>com.ibm.icu</groupId>
                    <artifactId>icu4j-localespi</artifactId>
                    <version>${com.ibm.icu.version}</version>
                </dependency>

                <!--Test Dependencies-->
                <dependency>
                    <groupId>org.junit.jupiter</groupId>
                    <artifactId>junit-jupiter</artifactId>
                    <version>5.7.1</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>all-lang</id>
            <dependencies>
                <dependency>
                    <groupId>edu.stanford.nlp</groupId>
                    <artifactId>stanford-corenlp</artifactId>
                    <version>${corenlp.version}</version>
                    <classifier>models-spanish</classifier>
                </dependency>
                <dependency>
                    <groupId>edu.stanford.nlp</groupId>
                    <artifactId>stanford-corenlp</artifactId>
                    <version>${corenlp.version}</version>
                    <classifier>models-french</classifier>
                </dependency>
            </dependencies>
        </profile>
    </profiles>




    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>
<!--            <plugin>-->
<!--                <groupId>org.openjfx</groupId>-->
<!--                <artifactId>javafx-maven-plugin</artifactId>-->
<!--                <version>0.0.3</version>-->
<!--                <configuration>-->
<!--                    <release>${maven.compiler.release}</release>-->
<!--                    <jlinkImageName>latic</jlinkImageName>-->
<!--                    <launcher>launcher</launcher>-->
<!--                    <mainClass>AppLauncher</mainClass>-->
<!--                </configuration>-->
<!--            </plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <propertiesEncoding>UTF-8</propertiesEncoding>
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>pdf</nonFilteredFileExtension>
                        <nonFilteredFileExtension>icns</nonFilteredFileExtension>
                        <nonFilteredFileExtension>ico</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>project-classifier</shadedClassifierName>
                            <outputFile>shade\${project.name}-${project.version}.jar</outputFile>
                            <transformers>
                                <transformer implementation=
                                                     "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>software.latic.AppLauncher</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
